--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-  <title>Warbler</title>
+  <title>Drum Notation Study</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../bird_thumbnail.png">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
